@@ -1,4 +1,4 @@
-FROM archlinux
+FROM archlinux as builder
 
 # Download database files
 RUN pacman -Sy
@@ -24,5 +24,15 @@ RUN mvn package
 RUN archlinux-java unset
 RUN pacman -S jdk-openjdk --noconfirm
 
-# Entrypoint (execute Kex)
-ENTRYPOINT ["/home/kex/kex.sh"]
+FROM openjdk:jre-slim
+COPY --from=builder /home/kex /kex
+RUN mv /kex/kex-runner/target/kex-runner-*-jar-with-dependencies.jar /kex/kex-runner/target/kex-runner.jar
+WORKDIR /kex
+ENTRYPOINT ["java", \
+    "-Xmx8g", \
+    "-Djava.security.manager", \
+    "-Djava.security.policy==kex.policy", \
+    "-Dlogback.statusListenerClass=ch.qos.logback.core.status.NopStatusListener", \
+    "-jar", "kex-runner/target/kex-runner.jar" \
+]
+
